# sync_music

./: .gitignore  .gitlab-ci.yml  .travis.yml  README.md  README.rst  actions.py  hashdb.py  pylintrc.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py  sync_music  sync_music.yaml  sync_music_replaygain_runner.py  sync_music_runner.py  tox.ini  transcode.py  util.py
.github/workflows/: check.yml
sync_music/: __init__.py  __main__.py  actions.py  copy.py  hashdb.py  metadata.py  replaygain.py  sync_music.py  transcode.py  util.py
tests/: __init__.py  test_hashdb.py  test_metadata.py  test_replaygain.py  test_sync_music.py  test_transcode.py  util.py
tests/reference_data/audiofiles/: png_image.m4a  stripped.aiff  stripped.flac  stripped.m4a  withalltags.flac  withalltags.m4a  withalltagsJPEG.m4a  withalltagsPNG.m4a  withtags.aiff  withtags.flac  withtags.m4a
tests/reference_data/playlists/: normal.m3u
tests/reference_data/regular/: stripped_flac.flac  stripped_m4a.m4a  withtags_flac.flac  withtags_m4a.m4a
