# sync_music - Sync music library to external device
# Copyright (C) 2015 Christian Fetzer
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License along
# with this program; if not, write to the Free Software Foundation, Inc.,
# 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.

[metadata]
name = sync_music
summary = Sync music library to external devices
description-file = README.rst
url = https://github.com/fetzerch/sync_music
author = Christian Fetzer
author_email = fetzer.ch@gmail.com
license = GPLv2+
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Natural Language :: English
    Operating System :: POSIX
    Programming Language :: Python :: 3 :: Only
    Topic :: Multimedia :: Sound/Audio :: Conversion
keywords = music synchronization

[files]
packages = sync_music

[entry_points]
console_scripts =
    sync_music = sync_music.sync_music:main
